--- a/.env
+++ b/.env
@@ -1,17 +1,19 @@
 # Postgres Live
-API_SECRET=98hbun98h #Used when creating a JWT. It can be anything
-DB_HOST=127.0.0.1
+DB_HOST=fullstack-postgres
 DB_DRIVER=postgres
-DB_USER=username
-DB_PASSWORD=password
-DB_NAME=fullstack_api
-DB_PORT=5432 #Default postgres port
+DB_USER=postgres
+DB_PASSWORD=secret123
+DB_NAME=pismo_development
+DB_PORT=5432
+
+# Used by pgadmin service
+PGADMIN_DEFAULT_EMAIL=emmanuelperotto@gmail.com
+PGADMIN_DEFAULT_PASSWORD=secret123
 
 # Postgres Test
-TestApiSecret=98hbun98h
-TestDbHost=127.0.0.1
-TestDbDriver=postgres
-TestDbUser=username
-TestDbPassword=password
-TestDbName=fullstack_api_test
-TestDbPort=5432
+TEST_DB_HOST=postgres_test
+TEST_DB_DRIVER=postgres
+TEST_DB_USER=postgres
+TEST_DB_PASSWORD=secret123
+TEST_DB_NAME=pismo_test
+TEST_DB_PORT=5432
