--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ DB_NAME=pismo_development
 DB_PORT=5432
 
 # Used by pgadmin service
-PGADMIN_DEFAULT_EMAIL=emmanuelperotto@gmail.com
+PGADMIN_DEFAULT_EMAIL=admin@email.com
 PGADMIN_DEFAULT_PASSWORD=secret123
 
 # Postgres Test
